# Coookies

./: CMakeCache.txt  CMakeLists.txt  Coookies  Makefile  README.md  SqWindow.cpp  SquaredScene.cpp  SquaredScene.h  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  six.txt  squaredhero.cpp  squaredhero.h  sqwindow.h  ui_mainwindow.h  ui_sqwindow.h
data/: fifth.txt  four.txt
gui/: SqWindow.cpp  SquaredScene.cpp  SquaredScene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingwindow.h  sqwindow.ui  ui_mainwindow.h  ui_settingwindow.h  ui_sqwindow_1.h
src/: main.cpp  programmsettings.cpp  programmsettings.h  squaredhero.cpp  squaredhero.h
